# linha-fina

./: .gitignore  CHANGELOG.md  README.md  benchs.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: coverage.yml  license_check.yml  lint.yml  opm-check.yml  publish_stable.yml  release-preview.yml  release_workflow.yml  repo-health.yml
benchmark/: compare.py  dataset.py
docs/: benchmark.md  components.md  concepts.md  domain_pipeline.md  engine.md  hierarchical_pipeline.md  index.md  pipeline.md  quickstart.md  troubleshooting.md  tuning.md
linha_fina/: __init__.py  _bracket_expansion.py  domain_engine.py  domain_opm.py  dynamic.py  engine.py  hierarchical_engine.py  hierarchical_opm.py  keywords.py  opm.py  templates.py  version.py
test/: test_bracket_expansion.py  test_domain_pipeline.py  test_dynamic.py  test_engine.py  test_hierarchical_pipeline.py  test_import.py  test_keywords.py  test_pipeline.py  test_pipeline_ovoscope.py  test_templates.py
